<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <group android:id="@+id/grp1" android:checkableBehavior="all" >
        <item
            android:id="@+id/nav_view_item0"
            android:icon="@drawable/ic_home"
            android:title="@string/navTitle0"/>
        <item
            android:id="@+id/nav_view_item1"
            android:icon="@drawable/ic_list"
            android:title="@string/navTitle1"/>
        <item
            android:id="@+id/nav_view_item2"
            android:icon="@drawable/ic_location_history"
            android:title="@string/navTitle2"/>
        <item
            android:id="@+id/nav_view_item3"
            android:icon="@drawable/ic_pin_drop"
            android:title="@string/navTitle3"/>
        <item
            android:id="@+id/nav_view_item4"
            android:icon="@drawable/ic_place"
            android:title="@string/navTitle4"/>
    </group>



    <group android:id="@+id/grp2" android:checkableBehavior="all" >
        <item
            android:id="@+id/action_divider"
            android:icon="@drawable/ic_view_headline"
            android:title="ads"/>

    </group>


</menu>










